test/mutation_analysis/s0165_compare_version_numbers/hafis/o3/mutants/22/result.txt
./test/mutation_analysis/s0165_compare_version_numbers/hafis/o3/mutants/22/Solution.java:32: error: unreachable statement
        for (j = 0; false; j++) {
                                ^
1 error
